--- a/styles.css
+++ b/styles.css
@@ -177,10 +177,6 @@ h1, h2, .large-headline {
     height: 41px;
 }
 
-.suma-logo {
-  width: 400px;
-  height: auto;
-}
 
 /* Navigation styles */
 nav {
@@ -307,90 +303,125 @@ nav {
     background-color: #243983;
 }
 
-/* Sustainabilitiy-as-a-service section */
+/* SAAS SECTION */
+
 .saas-section {
-    text-align: center; /* Aligns the text in the middle horizontally */
-    padding-top: 120px; /* Margin above the h2 */
-    padding-bottom: 150px; /* Margin below the paragraph */
-    max-width: 1090px;
-    margin: 0 auto;
+  margin: 0 1rem;
 }
 
-.saas-section h2 {
-    font-size: 40px;
-    font-weight: bold; /* Regular weight */
-    margin-bottom: 32px; /* Space between the h2 and paragraph */
-    color: #1A2421;
-}
-
-.saas-section p {
-    font-size: 24px;
-    font-weight: normal; /* Regular weight */
+.suma-logo {
+  max-width: 75%;
+  height: auto;
+  display: block;
+  margin: auto;
+  
 }
 
 .platform-image {
-  width: 100%;
+  max-width: 100%;
   height: auto;
-  margin-top: 40px;
 }
 
-/* Responsiveness for larger screens */
+.saas-section h2 {
+  text-align: center;
+  font-size: 2rem;
+  color: #1A2421;
+}
 
-@media (min-width: 2300px) {
-  .hero-section {
-    background-position: center -400px; /* Adjust this value to move the background image up or down */
+.saas-section p {
+  color: #1A2421;
+}
+
+.saas-btns {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 5rem;
+}
+
+.saas-btns a {
+  background: #1D2A59;
+  border-radius: 32px;
+  color: #fff;
+  border: none;
+  text-decoration: none;
+  padding: 0.75rem 1.5rem;
+  text-align: center;
+}
+
+.saas-btns a:hover {
+  background-color: #243983;
+}
+
+@media screen and (min-width: 760px) {
+  .saas-section {
+    width: 95%;
+  }
+
+  .suma-logo {
+    max-width: 50%;
+    height: auto;
+  }
+
+  .saas-section p {
+    max-width: 90%;
+    margin: auto;
+    text-align: center;
+    font-size: 1.25rem;
+    line-height: 30px;
+    margin-bottom: 2rem;
+  }
+
+  .saas-btns {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    gap: 2rem;
+    margin-bottom: 10rem;
   }
 }
 
-
-
-/* Responsiveness for smaller screens */
-@media screen and (max-width: 992px) {
-    .saas-section h2 {
-        font-size: 32px;
-    }
-
-    .saas-section p {
-        font-size: 20px;
-    }
+@media screen and (min-width: 1020px) {
+  .platform-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
-@media screen and (max-width: 768px) {
-    .saas-section {
-        padding-top: 100px;
-        padding-bottom: 120px;
-    }
+@media screen and (min-width: 1200px) {
+  .saas-section {
+    max-width: 1180px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-    .saas-section h2 {
-        font-size: 28px;
-    }
+  .suma-logo {
+    max-width: 30%;
+    margin-top: 10rem;
+    margin-bottom: 3rem;
+  }
 
-    .saas-section p {
-        font-size: 18px;
-    }
-}
+  .saas-section h2 {
+    margin-bottom: 2rem;
+    font-size: 2.5rem;
 
-@media screen and (max-width: 480px) {
-    .saas-section {
-    padding-top: 0px;
-    padding-bottom: 100px;
-    padding-left: 15px; /* Add left padding */
-    padding-right: 15px; /* Add right padding */
-    }
+  }
 
-    .saas-section h2 {
-        font-size: 24px;
-    }
+  .saas-btns a {
+    padding: 1rem 2rem;
+  }
 
-    .saas-section p {
-        font-size: 14px;
-        font-weight: bold;
-    }
-
-    .suma-logo {
-      width: 150px;
-      height: auto;
-    }
+  .platform-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+  }
 }
 
 /* Net Zero section styles */
@@ -540,240 +571,6 @@ nav {
     }
 }
 
-/* CarbonBOT section */
-.carbonbot-section {
-    display: flex;
-    padding-top: 160px;
-    padding-bottom: 160px;
-    margin-top: 0;
-}
-
-.carbonbot-section h2 {
-    font-size: 40px;
-    font-weight: bold;
-    text-align: left; /* Change from center to left */
-    margin-bottom: 12px; /* Add space between h2 and subtitle */
-    margin-top: 0px;
-}
-
-.carbonbot-content-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    max-width: 50%; /* Adjust the width for the left side */
-}
-
-.carbonbot-text-content {
-    max-width: 600px;
-}
-
-.subtitle {
-    font-size: 20px;
-    font-weight: bold;
-    text-align: left;
-    width: 100%;
-    margin-bottom: 0;
-}
-
-.carbonbot-text-content p {
-    font-size: 20px;
-    font-weight: normal;
-    margin-top: 16px;
-}
-
-.carbonbot-section-btn {
-    background-color: #1D2A59;
-    border: none;
-    color: white;
-    cursor: pointer;
-    font-size: 18px;
-    margin-top: 32px;
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    transition: background-color 0.3s;
-    border-radius: 32px;
-}
-
-button:hover {
-    background-color: #243983;
-}
-
-.carbonbot-image {
-    max-width: 50%; /* Adjust the width for the right side */
-    padding-left: 32px; /* Add left padding to separate the image from the text */
-    margin-left: auto;
-}
-
-/* Media Query for Tablets */
-@media screen and (max-width: 992px) {
-    .carbonbot-section {
-        flex-direction: column;
-    }
-
-    .carbonbot-content-wrapper {
-        max-width: 100%;
-        padding-left: 0;
-    }
-
-    .carbonbot-image {
-        max-width: 100%;
-        padding-left: 0;
-        margin-left: 0;
-        margin-top: 32px;
-    }
-}
-
-/* Media Query for Mobile devices */
-@media screen and (max-width: 768px) {
-    .carbonbot-section {
-        padding-top: 80px;
-    }
-
-    .carbonbot-text-content p {
-        font-size: 18px;
-    }
-
-    .carbonbot-section-btn {
-        font-size: 16px;
-        padding: 12px 24px;
-    }
-}
-
-@media screen and (max-width: 576px) {
-    .carbonbot-text-content p {
-        font-size: 16px;
-    }
-
-    .carbonbot-section-btn {
-        font-size: 14px;
-        padding: 8px 16px;
-    }
-}
-
-@media screen and (max-width: 480px) {
-  .carbonbot-section {
-      flex-direction: row;
-      padding-top: 80px;
-      padding-bottom: 80px;
-  }
-
-  .carbonbot-content-wrapper {
-      max-width: 100%;
-      order: 1;
-  }
-
-  .carbonbot-section h2 {
-      font-size: 28px;
-  }
-
-  .carbonbot-image {
-      max-width: 20%;
-      padding-left: 0;
-      padding-top: 16px;
-      order: 2;
-  }
-
-  .carbonbot-image img {
-      width: 100%;
-      max-width: none;
-      margin-left: auto;
-      display: none;
-  }
-}
-
-
-/* LCO2 Carbon Token section */
-.lco2-carbon-token {
-    background-color: #0595CF;
-    padding-top: 160px;
-    padding-bottom: 160px;
-    
-}
-
-.lco2-carbon-token h2 {
-    font-size: 40px;
-    color: #ffffff;
-    margin-bottom: 6px;
-
-}
-
-.lco2-h2 {
-    text-align: center;
-}
-
-
-
-.lco2-title-and-subtitle p {
-    font-size: 24px;
-    font-weight: normal;
-    color: #ffffff;
-    text-align: center;
-    margin-bottom: 32px;
-}
-
-.lco2-first-row, .lco2-second-row {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap; /* To make it responsive */
-    margin-top: 0;
-}
-
-.lco2-info-container {
-    width: calc(33.333% - 32px); /* Subtracting the 16px margin on both sides */
-    margin: 0 16px 32px; /* Adding margin to the sides and bottom */
-    text-align: left; /* Center the text inside the container */
-    max-width: 290px;
-}
-
-.lco2-info-container p {
-    color: #ffffff;
-}
-
-.lco2-feature-title {
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 16px;
-    font-family: 'Poppins', 'DM Sans', sans-serif;
-}
-
-@media screen and (max-width: 480px) {
-  .lco2-carbon-token h2 {
-    font-size: 30px;
-    line-height: 35px;
-    padding-bottom: 16px;
-  }
-
-  .lco2-first-row, .lco2-second-row {
-    margin: 0;
-  }
-
-  .lco2-carbon-token {
-    padding-top: 80px;
-    padding-bottom: 80px;
-  }
-
-  .lco2-info-container p {
-    font-size: 14px;
-  }
-
-  .lco2-info-container {
-    margin: 0;
-    width: 100%;
-    text-align: center;
-    max-width: fit-content;
-  }
-
-  .lco2-title-and-subtitle p {
-    font-size: 16px;
-  }
-
-  .lco2-feature-title {
-    font-size: 14px;
-    font-weight: bold;
-  }
-
-}
 
 
 /* Team section */
